--- a/HotelListing/appsettings.json
+++ b/HotelListing/appsettings.json
@@ -6,5 +6,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "Sqlconnection": "Data Source=DESKTOP-BTA4HKA\\SQLEXPRESS;database=MYpay;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
+  "Jwt": {
+    "Issuer": "MyPayApplication",
+    "Key": "thisiskey",
+    "Lifetime": 15
+  },
   "AllowedHosts": "*"
 }
